--- a/games.html
+++ b/games.html
@@ -22,15 +22,31 @@
       <a href="Games/clfinalfantasyVII.html">Final Fantasy 7</a>
       <a href="Games/clFNAF.html">FNAF</a>
       <a href="Games/clfridaynightfunkin.html">Friday Night Funkin</a>
+      <a href="Games/clfunnyshooter2.html">Funny Shooter 2</a>
+      <a href="Games/clgunmayhem.html">Gun Mayhem</a>
       <a href="Games/clgunmayhem2goof.html">Gun Mayhem 2</a>
+      <a href="Games/clgunmayhemredux.html">Gum Mayhem: Redux</a>
       <a href="Games/clhalflife.html">Half Life</a>
+      <a href="Games/clidlebreakout.html">Idle Breakout</a>
       <a href="Games/cllegobatman2superheroes.html">Lego Batman 2 Superheroes</a>
       <a href="Games/cllegoindianajones.html">Lego Indiana Jones</a>
+      <a href="Games/clmadnessaccelerant.html">Madness Accelerant</a>
+      <a href="Games/clmadnesscombatnexus.html">Madness Combat Nexus</a>
       <a href="Games/clngon.html">Ngon</a>
+      <a href="Games/clovofixed.html">OVO</a>
+      <a href="Games/clovo2.html">OVO 2</a>
       <a href="Games/clovodimensions.html">OVO: Dimensions</a>
       <a href="Games/clpokemonfirered.html">Pokemon: Fire Red</a>
+      <a href="Games/clpokemonemerald.html">Pokemon: Emerald</a>
+      <a href="Games/clpokemongold.html">Pokemon: Gold</a>
+      <a href="Games/clpokemonruby.html">Pokemon: Ruby</a>
+      <a href="Games/clpokemonsapphire.html">Pokemon: Sapphire</a>
+      <a href="Games/clpokemonplatinum.html">Pokemon: Platinum</a>
+      <a href="Games/clpolytrackworksnow">Polytrack</a>
+      <a href="Games/clpvz.html">PVZ</a>
       <a href="Games/clretrobowl.html">Retro Bowl</a>
       <a href="Games/clslope.html">Slope</a>
+      <a href="Games/clsnowrider.html">Snow Rider</a>
       <a href="Games/clsupermario64.html">Super Mario 64</a>
       <a href="Games/clsupermarioworld.html">Super Mario World</a>
       <a href="Games/clsupermetroid.html">Super Metroid</a>
