--- a/proxies.html
+++ b/proxies.html
@@ -13,6 +13,10 @@
     </div>
     <div id="proxies">
       <a href="https://rh.doge.land">Rammerhead</a>
+      <a href="https://math.spotifyfans.art">Nebula</a>
+      <a href="https://testing.voidtickets.xyz">Void Network</a>
+      <a href="https://shop.ddnssec.de">DayDream X</a>
+      <a href="https://hehe.ajh.boats/">AJH's Vault</a>
     </div>
     <div id="WIPMessage">
       <h2 style=color:red;>My Own Proxy Coming Soon (coding proxies is hard :( )</h2>
