--- a/games.html
+++ b/games.html
@@ -7,14 +7,17 @@
   <body>
     <div id="pageHeader">
        <h1>Games</h1>
-       <p style=color:red;>Note: These game files are not mine. They belong to the makers of the Ultimate Game Stash. Heres a link:</p>
+       <p style=color:red;>Note: These game files are not mine. They belong to the makers of the Ultimate Game Stash (S). Heres a link:</p>
        <a href="https://docs.google.com/document/u/0/d/1_FmH3BlSBQI7FGgAQL59-ZPe8eCxs35wel6JUyVaG8Q/edit?pli=1&authuser=0">Ultimate Game Stash Google Doc</a>
     </div>
     <div id="games">
+      <a href="https://amhooman.github.io/website/games/ageofwar/">Age of War</a>
       <a href="Games/clbasketrandom.html">Basket Random</a>
       <a href="Games/clburritobison.html">Burrito Bison</a>
       <a href="Games/clceleste2.html">Celeste 2</a>
       <a href="Games/clcrossyroad.html">Crossy Road</a>
+      <a href="https://mrbuilder1961.github.io/">Cookie Clicker</a>
+      <a href="https://gameinclassroom.github.io/color-tunnel-2/">Color Tunnel</a>
       <a href="Games/cldeltarune.html">Deltarune (only chapters 1 and 2)</a>
       <a href="Games/cldogeminer.html">Doge Miner</a>
       <a href="Games/clemulator.html">ROM Emulator</a>
@@ -45,7 +48,7 @@
       <a href="Games/clpolytrackworksnow">Polytrack</a>
       <a href="Games/clpvz.html">PVZ</a>
       <a href="Games/clretrobowl.html">Retro Bowl</a>
-      <a href="Games/clslope.html">Slope</a>
+      <a href="https://orcatech2711.github.io/nano/games/slope/index.html">Slope</a>
       <a href="Games/clsnowrider.html">Snow Rider</a>
       <a href="Games/clsupermario64.html">Super Mario 64</a>
       <a href="Games/clsupermarioworld.html">Super Mario World</a>
