--- a/games.html
+++ b/games.html
@@ -7,7 +7,7 @@
   <body>
     <div id="pageHeader">
        <h1>Games</h1>
-       <p style=color:red;>Note: These game files are not mine. They belong to the makers of the Ultimate Game Stash (S). Heres a link:</p>
+       <p style=color:red;>Note: These game files are not mine. They belong to the makers of the Ultimate Game Stash (Some are from other sites). Heres a link:</p>
        <a href="https://docs.google.com/document/u/0/d/1_FmH3BlSBQI7FGgAQL59-ZPe8eCxs35wel6JUyVaG8Q/edit?pli=1&authuser=0">Ultimate Game Stash Google Doc</a>
     </div>
     <div id="games">
