--- a/games.html
+++ b/games.html
@@ -13,6 +13,7 @@
     <div id="games">
       <a href="https://amhooman.github.io/website/games/ageofwar/">Age of War</a>
       <a href="Games/clbasketrandom.html">Basket Random</a>
+      <a href="https://space-waves-online.github.io/bitlife.html">BitLife</a>
       <a href="Games/clburritobison.html">Burrito Bison</a>
       <a href="Games/clceleste2.html">Celeste 2</a>
       <a href="Games/clcrossyroad.html">Crossy Road</a>
