--- a/games.html
+++ b/games.html
@@ -21,6 +21,7 @@
       <a href="https://gameinclassroom.github.io/color-tunnel-2/">Color Tunnel</a>
       <a href="Games/cldeltarune.html">Deltarune (only chapters 1 and 2)</a>
       <a href="Games/cldogeminer.html">Doge Miner</a>
+      <a href="https://drivemadunblockedgames.github.io/">Drive Mad</a>
       <a href="Games/clemulator.html">ROM Emulator</a>
       <a href="Games/clfinalfantasy.html">Final Fantasy</a>
       <a href="Games/clfinalfantasyVII.html">Final Fantasy 7</a>
