--- a/games.html
+++ b/games.html
@@ -37,6 +37,8 @@
       <a href="Games/cllegoindianajones.html">Lego Indiana Jones</a>
       <a href="Games/clmadnessaccelerant.html">Madness Accelerant</a>
       <a href="Games/clmadnesscombatnexus.html">Madness Combat Nexus</a>
+      <a href="https://gameshaxor.github.io/MonkeyMart/">Monkey Mart</a>
+      <a href="https://gameshaxor.github.io/MotoX3M/">MotoX3M</a>
       <a href="Games/clngon.html">Ngon</a>
       <a href="Games/clovofixed.html">OVO</a>
       <a href="Games/clovo2.html">OVO 2</a>
