--- a/proxies.html
+++ b/proxies.html
@@ -16,6 +16,8 @@
       <a href="https://testing.voidtickets.xyz">Void Network</a>
       <a href="https://shop.ddnssec.de">DayDream X</a>
       <a href="https://hehe.ajh.boats/">AJH's Vault</a>
+      <a href="https://104.218.50.66.ip.addr.tools/">Utopia</a>
+      <a href="https://support.helping-hands.site/">Space</a>
     </div>
     <div id="WIPMessage">
       <h2 style=color:red;>My Own Proxy Coming Soon (coding proxies is hard :( )</h2>
