--- a/games.html
+++ b/games.html
@@ -11,6 +11,7 @@
        <a href="https://docs.google.com/document/u/0/d/1_FmH3BlSBQI7FGgAQL59-ZPe8eCxs35wel6JUyVaG8Q/edit?pli=1&authuser=0">Ultimate Game Stash Google Doc</a>
     </div>
     <div id="games">
+      <a href="https://perigk.github.io/Timed-2048/">2048</a>
       <a href="https://amhooman.github.io/website/games/ageofwar/">Age of War</a>
       <a href="Games/clbasketrandom.html">Basket Random</a>
       <a href="https://space-waves-online.github.io/bitlife.html">BitLife</a>
